test/errors/indexed_offsets_error/zs/lengthof_in_array_expression_error.zs
package lengthof_in_array_expression_error;

struct LengthOfInArrayExpressionError
{
    uint32 offsets[];
offsets[lengthof(offsets)]:
    string fields[];
};
